# absens_demo

./: .gitignore  phase1.md  phase2.ipynb  pyproject.toml  readme.md
.github/workflows/: ci.yml
src/absens_demo/: __init__.py  alignment.py  cli.py  io.py  main.py  metrics.py  preprocessing.py  requests.py  utils.py  viz.py
tests/: conftest.py  test_io.py  test_requests.py  test_utils.py
