[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "absens-demo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "boto3",
    "numpy",
    "matplotlib",
    "ipykernel",
    "oauthlib",
    "pillow",
    "requests-oauthlib",
    "opencv-python",
    "imageio[ffmpeg]",
    "requests-toolbelt>=1.0.0",
    "sentinelhub",
    "scipy>=1.15.3",
    "scikit-image>=0.25.2",
    "tqdm",
]

[tool.hatch.build.targets.wheel]
packages = ["src/absens_demo"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "black>=24.0.0",
    "isort>=5.13.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[project.scripts]
make_video = "absens_demo.cli:run"


[project.optional-dependencies]
dev = ["pytest"]
